responsive display: Breakpoints in JS and CSS the same (needed to be calculated); break switches widht auto/100% (CSS) and shows/hides menu (JS). Menu now pushes the text aside (no reflow, text width stays the same).

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <
+  <link rel="stylesheet" href="styles/bower_components/base.css">bower_components
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/print.css">
   <link rel="stylesheet" href="styles/autoToc.css">
