fix internal link Transcribe Notes

--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ Memory fades quickly
 <p>For the photo above you might add the following line to your notes: »participant displays different font combinations in the layout application to see if the fonts go well together (see <em>U2-14-9-14_1.jpg</em> )«</p>
 </div>
 <h3 id="audio-1">Audio</h3>
-<p>Listen to the recording of your research session. Usually, I have the audio as a .mp3 and the notes as a typed out plaintext or wordprocessor document (see: <a href="#transcribeNotes">Transcribe Notes</a>), so I can open audio and transcript in parallel on my computer. When the audio contains information which is not in the document or if it supplements information that is already there, I pause the playback and write the additional information in the document. So the process is very similar to supplementing your notes from memory.</p>
+<p>Listen to the recording of your research session. Usually, I have the audio as a .mp3 and the notes as a typed out plaintext or wordprocessor document (see: <a href="#TranscribeNotes">Transcribe Notes</a>), so I can open audio and transcript in parallel on my computer. When the audio contains information which is not in the document or if it supplements information that is already there, I pause the playback and write the additional information in the document. So the process is very similar to supplementing your notes from memory.</p>
 <div class="example">
 <p>Audio recording: »…hmm I send it to my boss. She will check it. Now I go to that other document, and see…«</p>
 <p>The notes say: »Send document via mail«</p>
