minor grammar/tippos

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 <p>My advice is simple: Be friendly. If you come to their place (which is preferable, since you can observe the actual context) be a nice guest; if they come to your place or you meet in some »neutral space«, be a nice host.</p>
 <p>Greet the participant and thank for his/her time:</p>
 <blockquote>
-<p>Hello Lisa great to meet you. I’m pleased, that you could free some time for showing and telling me how you work.</p>
+<p>Hello Lisa, great to meet you. I’m pleased, that you could free some time for showing and telling me how you work.</p>
 </blockquote>
 <p>You may sprinkle in a bit of smalltalk:</p>
 <blockquote>
@@ -390,7 +390,7 @@
 conversation: You ask questions, the user answered them. -->
 <p>We gather data by asking questions and listening to the participant’s answers. However, the use of questions and answers in user needfinding is unlike the questions and answers in questionnaires. In questionnaires it is often aimed for short, definitive answers out of a determined set of possibilities (»on a 4 point scale: how much do you agree with…«). Instead of this, we aim for longer answers that are not from a determined set of possible asnwers. Thus we are more likely to get rich descriptions, much like veritable stories which retell the participant’s experiences. In addition, these stories tell us about the context of the user’s activities and the user’s motivations. To encourage giving such story like answers, we will often ask for <em>descriptions</em> of activities and the <em>reasons</em> for doing them.</p>
 <blockquote>
-<p>»can you describe me how you decided to use this layout?«</p>
+<p>»Can you describe me how you decided to use this layout?«</p>
 <p>»You said that you need to look that color model up. Why?«</p>
 </blockquote>
 <p>Asking questions and getting answers form a participant is a very versatile tool. It can be done without many resources. You are not tied to a specific place and you can talk about past events as well as future plans.</p>
@@ -475,11 +475,14 @@ conversation: You ask questions, the user answered them. -->
 </blockquote>
 <p>Using such open questions encourage telling longer, story-like answers. These answers will even contain information you did not expect to get.</p>
 <blockquote>
-<p>A participant is describing me the printing process: <em>»…then I look up which color specification the printery needs…«</em> That is a new step in the workflow I did not expect (Naively, I thought that you just send the document to the printery like you would when you print it on your desktop printer – have a file, print it). Thus, I discovered a step in the workflow and a potential field of work (taking care of color spaces and profiles) of which I did not know that it even exists!</p>
+<p>A participant is describing me the printing process: <em>»…then I look up which color specification the printery needs…«</em></p>
+<p>That is a new step in the workflow I did not expect (Naively, I thought that you just send the document to the printery like you would when you print it on your desktop printer – have a file, print it).</p>
+<p>Thus, I discovered a step in the workflow and a potential field of work (taking care of color spaces and profiles) of which I did not know that it even exists!</p>
 </blockquote>
 <p>The information you get will not be abstract as in answers like »good« or »I dislike it« but tied to a situation. This is preferable, because a future product will be used in real situations and not in an abstract space of thought.</p>
 <blockquote>
-<p>»I like it when the feedback [to the design] comes quickly. No annoying waiting… it always makes me nervous. Do they [the client] like it or do I need to throw out work?« – this tells us more about the situation than a client’s feedback being just described as »good«.</p>
+<p>»I like it when the feedback [to the design] comes quickly. No annoying waiting… it always makes me nervous. Do they [the client] like it or do I need to throw out work?«</p>
+<p>– this tells us more about the situation than a client’s feedback being just described as »good«.</p>
 </blockquote>
 <p>If you look back to the questions already mentioned, they will share some characteristics.</p>
 <blockquote>
@@ -533,7 +536,8 @@ conversation: You ask questions, the user answered them. -->
 </blockquote>
 <p>Similarly, you could be surprised or even annoyed by steps or actions in a workflow of the user which seem outright superfluous.</p>
 <blockquote>
-<p>»When I write a text I write a draft and then send it to my colleague via mail as an attached .doc file. My colleague comments on it and returns the mail to me« You may think that this is rather inefficient. You may be tempted to say »Why don't you paste the text in the mail and comment directly? Or write it live on Etherpad? This would be far quicker!«</p>
+<p>»When I write a text I write a draft and then send it to my colleague via mail as an attached .doc file. My colleague comments on it and returns the mail to me«</p>
+<p>You may think that this is rather inefficient. You may be tempted to say »Why don't you paste the text in the mail and comment directly? Or write it live on Etherpad? This would be far quicker!«</p>
 </blockquote>
 <p>Remember that nobody does inefficient things by purpose. Assume that the user has a reason. Try to find out what this reason may be.</p>
 <blockquote>
@@ -675,8 +679,6 @@ conversation: You ask questions, the user answered them. -->
 <p>When you finished going though your notes and giving your summary, thank the participant for taking the time. If you have any incentives or compensation, give them to the participant. In addition, I try to give an outlook on the next steps in the research to let the participant know how the data matters for me:</p>
 <blockquote>
 <p>My next steps would be going though audio and notes. After anonymizing what we recorded, me and my colleague analyze the data and the data from other research sessions to find out how graphic designers work.</p>
-</blockquote>
-<blockquote>
 <p>We will try to improve our products by making it more suitable to this workflow.</p>
 </blockquote>
 <h2 id="recording-data">Recording Data</h2>
@@ -762,7 +764,8 @@ Memory fades quickly
 <figure>
 <img src="images/NotesSupplements2Anno.png" />
 </figure>
-<p>In this scanned part of a note sheet you see how the supplements are used: <strong>1)</strong> These parts have been partly rewritten in black as it was too messy before. <strong>2)</strong> At the right you see an newly drawn annotated sketch that provides a visual representation (how the document is organized by inserting empty pages). <strong>3.)</strong> More information has been provided. It was »keeping for inspiration«, now its »keeping <em>old stuff</em> for inspiration«</p>
+<p>In this scanned part of a note sheet you see how the supplements are used:</p>
+<p><strong>1)</strong> These parts have been partly rewritten in black as it was too messy before. <strong>2)</strong> At the right you see an newly drawn annotated sketch that provides a visual representation (how the document is organized by inserting empty pages). <strong>3.)</strong> More information has been provided. It was »keeping for inspiration«, now its »keeping <em>old stuff</em> for inspiration«</p>
 </blockquote>
 <p>Using different colors is useful for another type of supplement: Ideas or remarks in connection to your notes. When I go through the notes I often have some ideas for a design or a question which I would like to further explore in a future interview. I write them down in a third color or I prefix the note with <em>»IDEA:«</em> or <em>»QUESTION«</em> in order to prevent myself of mixing ideas with empirical data.</p>
 <p>Writing notes, drawing sketches and supplementing them hereafter will enable you to preserve information in the most situations. However, for complicated descriptions of workflows or if you just loose track by accident, it might be useful to have a backup by using audio recording.</p>
@@ -859,7 +862,7 @@ Memory fades quickly
 <p>Then we give that data a headline and name the topic:</p>
 <blockquote>
 <ul>
-<li><strong>theme:</strong> use other’s work for inspiration</li>
+<li><strong>Theme:</strong> Use other’s work for inspiration</li>
 <li><em>Data:</em> »I look on google images how other calendars look like«</li>
 <li><em>Data:</em> Browses through the book to see…</li>
 </ul>
@@ -867,7 +870,7 @@ Memory fades quickly
 <p>When we come across a piece of data which shares the topic we can add it to the group too:</p>
 <blockquote>
 <ul>
-<li><em>theme:</em> use other’s work for inspiration</li>
+<li><em>Theme:</em> use other’s work for inspiration</li>
 <li><strong>Data: Searches on amazon to see how covers of books about the same topic look like</strong></li>
 <li><em>Data:</em> »I look on google images how other calendars look like«</li>
 <li><em>Data:</em> Browses through the book to see…</li>
@@ -875,7 +878,7 @@ Memory fades quickly
 </blockquote>
 <h2 id="create-meaningful-groups">Create meaningful groups</h2>
 <p>I already talked about grouping data by shared themes. The question is: What is a meaningful theme?</p>
-<p>One method to group data and to derive a theme would be going through the data and see which utterances and observations mention the same thing or the same assessment. Thus, all notes mentioning »color« would belong to one theme and get the title »Color«; all notes mentioning »good« belong to one theme and get the title »good things«.</p>
+<p>One method to group data and to derive a theme would be going through the data and see which utterances and observations mention the same thing or the same assessment. Thus, all notes mentioning »color« would belong to one theme and get the title »Color«; all notes mblockquote p+p entioning »good« belong to one theme and get the title »good things«.</p>
 <blockquote>
 <p>Let’s say we gathered this data (among others) in research on Do-It-Yourself-Work (DIY)</p>
 <ul>
